Modified the database and finished the expense and task

--- a/app/src/main/res/layout/activity_depense_create.xml
+++ b/app/src/main/res/layout/activity_depense_create.xml
@@ -4,17 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".action.depense.DepenseCreateActivity">
+    tools:context=".action.depense.DepenseCreateActivity"
+    tools:layout_editor_absoluteY="81dp">
 
+    <EditText
+        android:id="@+id/montant"
+        android:layout_width="308dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="34dp"
+        android:ems="10"
+        android:hint="Montant (DH)"
+        android:inputType="numberDecimal"
+        app:layout_constraintBottom_toTopOf="@+id/projet_spinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/projet_spinner"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginBottom="17dp"
         android:layout_marginEnd="26dp"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="14dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/societe_spinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,74 +40,68 @@
         android:id="@+id/societe_spinner"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="26dp"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="6dp"
         app:layout_constraintBottom_toTopOf="@+id/date_depense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/projet_spinner" />
 
     <EditText
-        android:id="@+id/montant"
-        android:layout_width="308dp"
-        android:layout_height="41dp"
-        android:layout_marginBottom="14dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:hint="Montant (DH)"
-        android:inputType="numberDecimal"
-        app:layout_constraintBottom_toTopOf="@+id/projet_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/date_depense"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="26dp"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="4dp"
         android:ems="10"
-        android:hint="Date"
+        android:hint="Date : jj-mm-aaaa"
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/commentaire_depense"
+        app:layout_constraintBottom_toTopOf="@+id/heur_depense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/societe_spinner" />
 
     <EditText
-        android:id="@+id/commentaire_depense"
+        android:id="@+id/heur_depense"
         android:layout_width="308dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="26dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="19dp"
         android:layout_marginEnd="26dp"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:hint="Heur : HH:mm"
+        android:inputType="time"
+        app:layout_constraintBottom_toTopOf="@+id/commentaire_depense"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/date_depense" />
+
+    <EditText
+        android:id="@+id/commentaire_depense"
+        android:layout_width="308dp"
+        android:layout_height="74dp"
+        android:layout_marginBottom="22dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginStart="26dp"
         android:ems="10"
         android:hint="Commentaire"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/ajouter_depense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date_depense" />
+        app:layout_constraintTop_toBottomOf="@+id/heur_depense" />
 
     <Button
         android:id="@+id/ajouter_depense"
         android:layout_width="131dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="102dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="114dp"
         android:layout_marginStart="115dp"
-        android:layout_marginTop="15dp"
-        android:text="Ajouter"
         android:onClick="createDepense"
+        android:text="Ajouter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
