--- a/app/src/main/res/layout/tache_info_popup.xml
+++ b/app/src/main/res/layout/tache_info_popup.xml
@@ -19,19 +19,20 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/date_popup"
+        app:layout_constraintEnd_toStartOf="@+id/date_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/societe_popup"
+        android:id="@+id/societe_popup_tache"
         android:layout_width="181dp"
         android:layout_height="48dp"
+        android:layout_marginBottom="1dp"
         android:layout_marginEnd="1dp"
         android:text="Sharpinfo societe for infomation"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/projet_popup"
+        app:layout_constraintBottom_toTopOf="@+id/projet_popup_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -40,56 +41,57 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="61dp"
-        android:text="DHs"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="88dp"
+        android:text="Heurs"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/societe_popup"
+        app:layout_constraintBottom_toTopOf="@+id/societe_popup_tache"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/montant_popup"
-        app:layout_constraintTop_toBottomOf="@+id/date_popup" />
+        app:layout_constraintStart_toEndOf="@+id/nbrheur_popup_tache"
+        app:layout_constraintTop_toBottomOf="@+id/heur_popup_tache" />
 
     <TextView
-        android:id="@+id/montant_popup"
-        android:layout_width="99dp"
-        android:layout_height="25dp"
+        android:id="@+id/nbrheur_popup_tache"
+        android:layout_width="46dp"
+        android:layout_height="24dp"
         android:layout_marginBottom="17dp"
-        android:text="85500"
+        android:layout_marginTop="20dp"
+        android:text="3"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/societe_popup"
+        app:layout_constraintBottom_toTopOf="@+id/societe_popup_tache"
         app:layout_constraintEnd_toStartOf="@+id/textView9"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/heur_popup" />
+        app:layout_constraintTop_toBottomOf="@+id/heur_popup_tache"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/heur_popup"
+        android:id="@+id/heur_popup_tache"
         android:layout_width="74dp"
         android:layout_height="25dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="108dp"
         android:text="15:35"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/montant_popup"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/date_popup" />
+        app:layout_constraintTop_toBottomOf="@+id/date_popup_tache" />
 
     <TextView
-        android:id="@+id/date_popup"
+        android:id="@+id/date_popup_tache"
         android:layout_width="104dp"
         android:layout_height="24dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="18dp"
         android:layout_marginEnd="45dp"
         android:layout_marginTop="16dp"
         android:text="08-05-2018"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/heur_popup"
-        app:layout_constraintEnd_toStartOf="@+id/dismiss_depense"
+        app:layout_constraintBottom_toTopOf="@+id/heur_popup_tache"
+        app:layout_constraintEnd_toStartOf="@+id/dismiss_tache"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -97,104 +99,106 @@
         android:id="@+id/textView4"
         android:layout_width="51dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="85dp"
         android:text="Heur :"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toStartOf="@+id/heur_popup"
+        app:layout_constraintEnd_toStartOf="@+id/heur_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="74dp"
-        android:layout_height="22dp"
-        android:layout_marginBottom="26dp"
+        android:layout_width="70dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="23dp"
         android:layout_marginEnd="18dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="64dp"
         android:text="Societé :"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintEnd_toStartOf="@+id/societe_popup"
+        app:layout_constraintEnd_toStartOf="@+id/societe_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="62dp"
-        android:layout_height="23dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="59dp"
+        android:layout_height="24dp"
+        android:layout_marginBottom="26dp"
         android:layout_marginEnd="18dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="75dp"
         android:text="Projet :"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toStartOf="@+id/projet_popup"
+        app:layout_constraintEnd_toStartOf="@+id/societe_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="78dp"
-        android:layout_height="24dp"
-        android:layout_marginBottom="18dp"
+        android:layout_width="57dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="18dp"
-        android:layout_marginStart="56dp"
-        android:text="Montant : "
+        android:layout_marginStart="77dp"
+        android:text="Durée : "
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toStartOf="@+id/montant_popup"
+        app:layout_constraintEnd_toStartOf="@+id/nbrheur_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
-        android:id="@+id/projet_popup"
+        android:id="@+id/projet_popup_tache"
         android:layout_width="182dp"
         android:layout_height="47dp"
+        android:layout_marginStart="18dp"
         android:text="Géstion de Projet et de societes Android"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/commentaire_popup"
+        app:layout_constraintBottom_toTopOf="@+id/commentaire_popup_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/societe_popup" />
+        app:layout_constraintTop_toBottomOf="@+id/societe_popup_tache" />
 
     <ImageButton
-        android:id="@+id/dismiss_depense"
+        android:id="@+id/dismiss_tache"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="111dp"
         android:layout_marginEnd="1dp"
+        android:layout_marginTop="1dp"
         android:background="@null"
-        app:layout_constraintBottom_toTopOf="@+id/societe_popup"
+        app:layout_constraintBottom_toTopOf="@+id/societe_popup_tache"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/date_popup"
+        app:layout_constraintStart_toEndOf="@+id/date_popup_tache"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/btn_dialog" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="120dp"
-        android:layout_height="22dp"
-        android:layout_marginBottom="62dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="24dp"
+        android:layout_marginBottom="57dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:text="Commentaire :"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/commentaire_popup"
+        app:layout_constraintEnd_toStartOf="@+id/commentaire_popup_tache"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
-        android:id="@+id/commentaire_popup"
+        android:id="@+id/commentaire_popup_tache"
         android:layout_width="179dp"
         android:layout_height="81dp"
         android:layout_marginEnd="3dp"
@@ -204,5 +208,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/projet_popup" />
+        app:layout_constraintTop_toBottomOf="@+id/projet_popup_tache" />
 </android.support.constraint.ConstraintLayout>
