--- a/app/src/main/res/layout/item_tache_list.xml
+++ b/app/src/main/res/layout/item_tache_list.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/depense_item"
+    android:id="@+id/tache_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#eaeaea"
@@ -13,13 +13,12 @@
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
-        android:id="@+id/depense_date"
+        android:id="@+id/tache_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:text="08-05-2018 "
+        android:text="15-05-2018"
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -27,24 +26,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/depense_montant"
-        android:layout_width="196dp"
+        android:id="@+id/tache_nbrheur"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_marginStart="42dp"
+        android:layout_marginStart="30dp"
         android:layout_weight="1"
-        android:text="200 000 DHs "
+        android:text="03"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/depense_date" />
+        app:layout_constraintTop_toBottomOf="@+id/tache_date" />
 
     <TextView
-        android:id="@+id/depense_seeMore"
-        android:layout_width="40dp"
-        android:layout_height="28dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/tache_seeMore"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
         android:drawableEnd="@drawable/ic_more_vert_black_24dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
@@ -54,28 +51,36 @@
     </TextView>
 
     <TextView
-        android:id="@+id/depense_heur"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text=" 15:30"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="at"
         android:textColor="@color/black"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/depense_date"
+        app:layout_constraintStart_toEndOf="@+id/tache_date"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tache_heur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="22:17"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Heurs"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/tache_nbrheur"
+        app:layout_constraintTop_toBottomOf="@+id/tache_date" />
 </android.support.constraint.ConstraintLayout>
 
 
