--- a/app/src/main/res/layout/item_projet_list.xml
+++ b/app/src/main/res/layout/item_projet_list.xml
@@ -10,6 +10,7 @@
     android:paddingBottom="10dp"
     android:paddingTop="10dp"
     android:clickable="true"
+    android:background="#eaeaea"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
