--- a/app/src/main/res/layout/item_societe_list.xml
+++ b/app/src/main/res/layout/item_societe_list.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="10dp"
+    android:background="#eaeaea"
     android:paddingTop="10dp">
 
     <TextView
