--- a/app/src/main/res/layout/item_tache_list.xml
+++ b/app/src/main/res/layout/item_tache_list.xml
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Heurs"
+        android:text="Heures"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/tache_nbrheur"
         app:layout_constraintTop_toBottomOf="@+id/tache_date" />
