--- a/app/src/main/res/layout/activity_test_chart.xml
+++ b/app/src/main/res/layout/activity_test_chart.xml
@@ -4,17 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".action.TestChartActivity">
+    tools:context=".action.TestChartActivity"
+    tools:layout_editor_absoluteY="89dp">
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/chart2"
+        android:layout_width="297dp"
+        android:layout_height="244dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginStart="44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chart" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/chart"
-        android:layout_width="345dp"
-        android:layout_height="283dp"
-        android:layout_marginBottom="341dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="296dp"
+        android:layout_height="225dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginStart="44dp"
+        app:layout_constraintBottom_toTopOf="@+id/chart2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
