added view taske/projects/expenses for a givensociety

--- a/app/src/main/res/layout/content_side_menu.xml
+++ b/app/src/main/res/layout/content_side_menu.xml
@@ -26,6 +26,6 @@
     <include
         layout="@layout/activity_menu"
         android:layout_width="match_parent"
-        android:layout_height="500dp" />
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
